# ocaml-cordova-plugin-sign-in-with-apple

./: README.md  cordova-plugin-sign-in-with-apple.opam  dune-project
.github/workflows/: main.yml
src/: cordova_sign_in_with_apple.mli  dune
